Bump java version to 11
Signed-off-by: Niels Thykier <niels@thykier.net>